Add acme account service test