@@ -4,12 +4,14 @@ import com.czertainly.api.exception.NotFoundException;
 import com.czertainly.api.model.client.acme.AcmeAccountListResponseDto;
 import com.czertainly.api.model.client.acme.AcmeAccountResponseDto;
 import com.czertainly.api.model.core.acme.AccountStatus;
+import com.czertainly.api.model.core.acme.OrderStatus;
 import com.czertainly.core.dao.entity.AuthorityInstanceReference;
 import com.czertainly.core.dao.entity.Certificate;
 import com.czertainly.core.dao.entity.CertificateContent;
 import com.czertainly.core.dao.entity.Connector;
 import com.czertainly.core.dao.entity.RaProfile;
 import com.czertainly.core.dao.entity.acme.AcmeAccount;
+import com.czertainly.core.dao.entity.acme.AcmeOrder;
 import com.czertainly.core.dao.entity.acme.AcmeProfile;
 import com.czertainly.core.dao.repository.AcmeProfileRepository;
 import com.czertainly.core.dao.repository.AuthorityInstanceReferenceRepository;
@@ -18,6 +20,7 @@ import com.czertainly.core.dao.repository.CertificateRepository;
 import com.czertainly.core.dao.repository.ConnectorRepository;
 import com.czertainly.core.dao.repository.RaProfileRepository;
 import com.czertainly.core.dao.repository.acme.AcmeAccountRepository;
+import com.czertainly.core.dao.repository.acme.AcmeOrderRepository;
 import com.czertainly.core.security.authz.SecuredUUID;
 import com.czertainly.core.security.authz.SecurityFilter;
 import com.czertainly.core.util.BaseSpringBootTest;
@@ -26,15 +29,14 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 
-import java.security.cert.CertificateException;
+import java.time.Instant;
+import java.time.temporal.ChronoUnit;
+import java.util.Date;
 import java.util.List;
 
-public class AcmeAccountServiceTest extends BaseSpringBootTest {
-
-    private static final String ADMIN_NAME = "ACME_USER";
+class AcmeAccountServiceTest extends BaseSpringBootTest {
 
     private static final String RA_PROFILE_NAME = "testRaProfile1";
-    private static final String CLIENT_NAME = "testClient1";
 
     @Autowired
     private com.czertainly.core.service.RaProfileService raProfileService;
@@ -49,12 +51,8 @@ public class AcmeAccountServiceTest extends BaseSpringBootTest {
     private AuthorityInstanceReferenceRepository authorityInstanceReferenceRepository;
     @Autowired
     private ConnectorRepository connectorRepository;
-
-    private RaProfile raProfile;
-    private Certificate certificate;
-    private CertificateContent certificateContent;
-    private AuthorityInstanceReference authorityInstanceReference;
-    private Connector connector;
+    @Autowired
+    private AcmeOrderRepository acmeOrderRepository;
 
     @Autowired
     private AcmeAccountService acmeAccountService;
@@ -68,36 +66,34 @@ public class AcmeAccountServiceTest extends BaseSpringBootTest {
     @Autowired
     private AcmeProfileRepository acmeProfileRepository;
 
-    private AcmeProfile acmeProfile;
-
     private AcmeAccount acmeAccount;
 
     @BeforeEach
     public void setUp() {
 
-        certificateContent = new CertificateContent();
+        CertificateContent certificateContent = new CertificateContent();
         certificateContent = certificateContentRepository.save(certificateContent);
 
-        certificate = new Certificate();
+        Certificate certificate = new Certificate();
         certificate.setCertificateContent(certificateContent);
         certificate.setSerialNumber("123456789");
-        certificate = certificateRepository.save(certificate);
+        certificateRepository.save(certificate);
 
-        connector = new Connector();
+        Connector connector = new Connector();
         connector.setUrl("http://localhost:3665");
         connector = connectorRepository.save(connector);
 
-        authorityInstanceReference = new AuthorityInstanceReference();
+        AuthorityInstanceReference authorityInstanceReference = new AuthorityInstanceReference();
         authorityInstanceReference.setAuthorityInstanceUuid("1l");
         authorityInstanceReference.setConnector(connector);
         authorityInstanceReference = authorityInstanceReferenceRepository.save(authorityInstanceReference);
 
-        raProfile = new RaProfile();
+        RaProfile raProfile = new RaProfile();
         raProfile.setName(RA_PROFILE_NAME);
         raProfile.setAuthorityInstanceReference(authorityInstanceReference);
         raProfile = raProfileRepository.save(raProfile);
 
-        acmeProfile = new AcmeProfile();
+        AcmeProfile acmeProfile = new AcmeProfile();
         acmeProfile.setWebsite("sample website");
         acmeProfile.setTermsOfServiceUrl("sample terms");
         acmeProfile.setValidity(30);
@@ -108,7 +104,6 @@ public class AcmeAccountServiceTest extends BaseSpringBootTest {
         acmeProfile.setDnsResolverIp("localhost");
         acmeProfile.setTermsOfServiceChangeUrl("change url");
         acmeProfileRepository.save(acmeProfile);
-
 
         acmeAccount = new AcmeAccount();
         acmeAccount.setStatus(AccountStatus.VALID);
@@ -121,35 +116,42 @@ public class AcmeAccountServiceTest extends BaseSpringBootTest {
     }
 
     @Test
-    public void testListAccounts() {
+    void testListAccounts() {
         List<AcmeAccountListResponseDto> accounts = acmeAccountService.listAcmeAccounts(SecurityFilter.create());
         Assertions.assertNotNull(accounts);
         Assertions.assertFalse(accounts.isEmpty());
         Assertions.assertEquals(1, accounts.size());
-        Assertions.assertEquals(acmeAccount.getAccountId(), accounts.get(0).getAccountId());
+        Assertions.assertEquals(acmeAccount.getAccountId(), accounts.getFirst().getAccountId());
     }
 
     @Test
-    public void testGetAccountById() throws NotFoundException {
+    void testGetAccountById() throws NotFoundException {
+        AcmeOrder acmeOrder = new AcmeOrder();
+        acmeOrder.setAcmeAccount(acmeAccount);
+        acmeOrder.setAcmeAccountUuid(acmeAccount.getUuid());
+        acmeOrder.setStatus(OrderStatus.PENDING);
+        acmeOrder.setExpires(Date.from(Instant.now().minus(1, ChronoUnit.DAYS)));
+        acmeOrderRepository.save(acmeOrder);
         AcmeAccountResponseDto dto = acmeAccountService.getAcmeAccount(acmeAccount.getAcmeProfile().getSecuredParentUuid(), acmeAccount.getSecuredUuid());
         Assertions.assertNotNull(dto);
         Assertions.assertEquals(acmeAccount.getAccountId(), dto.getAccountId());
         Assertions.assertNotNull(acmeAccount.getUuid());
+        Assertions.assertEquals(1, dto.getFailedOrders());
     }
 
     @Test
-    public void testGetAccountById_notFound() {
+    void testGetAccountById_notFound() {
         Assertions.assertThrows(NotFoundException.class, () -> acmeAccountService.getAcmeAccount(acmeAccount.getAcmeProfile().getSecuredParentUuid(), SecuredUUID.fromString("abfbc322-29e1-11ed-a261-0242ac120002")));
     }
 
     @Test
-    public void testRemoveAccount() throws NotFoundException {
+    void testRemoveAccount() throws NotFoundException {
         acmeAccountService.revokeAccount(acmeAccount.getAcmeProfile().getSecuredParentUuid(), acmeAccount.getSecuredUuid());
         Assertions.assertEquals(AccountStatus.REVOKED, acmeAccountService.getAcmeAccount(acmeAccount.getAcmeProfile().getSecuredParentUuid(), acmeAccount.getSecuredUuid()).getStatus());
     }
 
     @Test
-    public void testRemoveAccount_notFound() {
+    void testRemoveAccount_notFound() {
         Assertions.assertThrows(
                 NotFoundException.class,
                 () -> acmeAccountService.getAcmeAccount(acmeAccount.getAcmeProfile().getSecuredParentUuid(), SecuredUUID.fromString("abfbc322-29e1-11ed-a261-0242ac120002"))
@@ -157,42 +159,42 @@ public class AcmeAccountServiceTest extends BaseSpringBootTest {
     }
 
     @Test
-    public void testEnableAccount() throws NotFoundException, CertificateException {
+    void testEnableAccount() throws NotFoundException {
         acmeAccountService.enableAccount(acmeAccount.getAcmeProfile().getSecuredParentUuid(), acmeAccount.getSecuredUuid());
-        Assertions.assertEquals(true, acmeAccountService.getAcmeAccount(acmeAccount.getAcmeProfile().getSecuredParentUuid(), acmeAccount.getSecuredUuid()).isEnabled());
+        Assertions.assertTrue(acmeAccountService.getAcmeAccount(acmeAccount.getAcmeProfile().getSecuredParentUuid(), acmeAccount.getSecuredUuid()).isEnabled());
     }
 
     @Test
-    public void testEnableAccount_notFound() {
+    void testEnableAccount_notFound() {
         Assertions.assertThrows(NotFoundException.class, () -> acmeAccountService.enableAccount(acmeAccount.getAcmeProfile().getSecuredParentUuid(), SecuredUUID.fromString("abfbc322-29e1-11ed-a261-0242ac120002")));
     }
 
     @Test
-    public void testDisableAccount() throws NotFoundException {
+    void testDisableAccount() throws NotFoundException {
         acmeAccountService.disableAccount(acmeAccount.getAcmeProfile().getSecuredParentUuid(), acmeAccount.getSecuredUuid());
-        Assertions.assertEquals(false, acmeAccountService.getAcmeAccount(acmeAccount.getAcmeProfile().getSecuredParentUuid(), acmeAccount.getSecuredUuid()).isEnabled());
+        Assertions.assertFalse(acmeAccountService.getAcmeAccount(acmeAccount.getAcmeProfile().getSecuredParentUuid(), acmeAccount.getSecuredUuid()).isEnabled());
     }
 
     @Test
-    public void testDisableAccount_notFound() {
+    void testDisableAccount_notFound() {
         Assertions.assertThrows(NotFoundException.class, () -> acmeAccountService.disableAccount(acmeAccount.getAcmeProfile().getSecuredParentUuid(), SecuredUUID.fromString("abfbc322-29e1-11ed-a261-0242ac120002")));
     }
 
     @Test
-    public void testBulkRemove() throws NotFoundException {
+    void testBulkRemove() throws NotFoundException {
         acmeAccountService.bulkRevokeAccount(List.of(acmeAccount.getSecuredUuid()));
         Assertions.assertEquals(AccountStatus.REVOKED, acmeAccountService.getAcmeAccount(acmeAccount.getAcmeProfile().getSecuredParentUuid(), acmeAccount.getSecuredUuid()).getStatus());
     }
 
     @Test
-    public void testBulkEnable() throws NotFoundException {
+    void testBulkEnable() throws NotFoundException {
         acmeAccountService.bulkEnableAccount(List.of(acmeAccount.getSecuredUuid()));
-        Assertions.assertEquals(true, acmeAccountService.getAcmeAccount(acmeAccount.getAcmeProfile().getSecuredParentUuid(), acmeAccount.getSecuredUuid()).isEnabled());
+        Assertions.assertTrue(acmeAccountService.getAcmeAccount(acmeAccount.getAcmeProfile().getSecuredParentUuid(), acmeAccount.getSecuredUuid()).isEnabled());
     }
 
     @Test
-    public void testBulkDisable() throws NotFoundException {
+    void testBulkDisable() throws NotFoundException {
         acmeAccountService.bulkDisableAccount(List.of(acmeAccount.getSecuredUuid()));
-        Assertions.assertEquals(false, acmeAccountService.getAcmeAccount(acmeAccount.getAcmeProfile().getSecuredParentUuid(), acmeAccount.getSecuredUuid()).isEnabled());
+        Assertions.assertFalse(acmeAccountService.getAcmeAccount(acmeAccount.getAcmeProfile().getSecuredParentUuid(), acmeAccount.getSecuredUuid()).isEnabled());
     }
 }
